--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,20 @@
   "editor.tabSize": 2,
   "editor.stickyTabStops": true,
   "editor.acceptSuggestionOnEnter": "on",
-  "editor.fontSize": 11
+  "editor.fontSize": 11,
+  "liveSassCompile.settings.formats": [
+    {
+      "format": "expanded",
+      "extensionName": ".css",
+      "savePath": "/css"
+    },
+    {
+      "format": "compressed",
+      "extensionName": ".min.css",
+      "savePath": "/css"
+    }
+  ],
+  "liveSassCompile.settings.excludeList": ["/**/node_modules/**", "/.vscode/**"],
+  "liveSassCompile.settings.generateMap": true,
+  "liveSassCompile.settings.autoprefix": ["> 1%", "last 2 versions"]
 }
